--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "cypress.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cy:open": "cypress open",
+    "test": "cypress run"
   },
   "keywords": [
     "testing",
@@ -14,5 +15,10 @@
   ],
   "author": "Walmyr <wlsf82@gmail.com> (https://walmyr.dev/)",
   "license": "MIT",
-  "description": "Projeto do curso - Testes End-to-End com Cypress e Cucumber: Guia Definitivo - da Escola Talking About Testing"
+  "description": "Projeto do curso - Testes End-to-End com Cypress e Cucumber: Guia Definitivo - da Escola Talking About Testing",
+  "devDependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^23.0.0",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.5",
+    "cypress": "^15.1.0"
+  }
 }
